Renamed document_topic_dist columns
Renamed to Topic_1, Topic_2 etc

--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -115,6 +115,8 @@ optimal_idx <- which.min(perplexities)
 docs_topics <- posterior(topic_models[[optimal_idx]], email_dtm2)
 document_topic_dist <- docs_topics[["topics"]]
 
+colnames(document_topic_dist) <- paste("Topic", colnames(document_topic_dist), sep = "_")
+
 # Make sure to stop cluster *plus* insert serial backend
 stopCluster(cl); print("Cluster stopped.")
 # insert serial backend, otherwise error in repetetive tasks
