General Inquirer library

--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -16,6 +16,7 @@ library(topicmodels)
 library(tidytext)
 library(tidyr)
 library(tibble)
+library(tm.lexicon.GeneralInquirer)
 ```
 ### Start cluster
 ```{r}
