--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -185,10 +185,27 @@ recall(test_cm,relevant='True') #what % of positive tuples did the classifier la
 ## 3B - Baseline KNN Model
 ```{r}
 
+
 ```
 ## 3B - Baseline RPart Model
 ```{r}
 library(rpart)
+
+control <- trainControl(method = "cv", number = 5, sampling = "smote", classProbs= TRUE, summaryFunction = twoClassSummary)
+
+grid <- expand.grid(.cp = c(0.005, 0.01, 0.02, 0.05, 0.1))
+
+rpart_model_smote <- train(poi ~ ., data = cbind(train_features_df, train_poi), method = "rpart", metric = "ROC", trControl = control, preProcess = c("scale", "center"), tuneGrid = grid)
+
+rpart_model_smote$bestTune
+
+# PRECISION and RECALL
+test_cm_rpart <- table(predict(rpart_model_smote, test_features_df), test_poi$poi)
+confusionMatrix(test_cm_rpart, mode = 'everything') # acc 0.7255, pre 0.9444, recall 0.7391
+
+# AUC
+test_pred_rpart <- ROCR::prediction(as.numeric(predict(rpart_model_smote, test_features_df)), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_rpart, "auc")@y.values) # 0.669 auc
 
 ```
 
@@ -215,7 +232,7 @@ confusionMatrix(test_pred1, test_poi$poi) #Testing accuracy
 # tuning the model
 cvCtrl = trainControl(method="cv", number = 5)
 grid = expand.grid(size = 2, decay = 0)
-nn3 = train(poi ~., method = 'nnet', data = train2, trControl = cvCtrl, tuneGrid = grid, tuneLenght = 5)
+nn3 = train(poi ~., method = 'nnet', data = train2, trControl = cvCtrl, tuneGrid = grid, tuneLength = 5)
 nn3_pred = predict(nn3, train2)
 confusionMatrix(nn3_pred, train_poi$poi) #Training accuracy 
 # test data pred 
@@ -272,10 +289,6 @@ test_cm = as.matrix(table(Actual=test_poi$poi, Predicted=test_pred))
 test_cm
 ```
 
-## 3C - Bagging
-```{r}
-
-```
 ## 3C - Boosting
 ```{r}
 
