--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -127,6 +127,7 @@ stopCluster(cl); print("Cluster stopped.")
 # insert serial backend, otherwise error in repetetive tasks
 registerDoSEQ()
 ```
+
 ## Feature Construction Method 3
 ```{r}
 
@@ -166,20 +167,30 @@ colnames(test_poi) <- c("poi")
 ## 3B - Baseline C5.0 Model
 ```{r}
 library(C50)
-model_tree <- C5.0(poi ~ ., cbind(train_features_df,train_poi)) #Fit model
-summary(model_tree) #We can peek into the tree model
-train_pred_tree <- predict(model_tree, train_features_df) #predict
-mean(train_pred_tree == train_poi$poi) #Calculate accuracy
-test_pred_tree <- predict(model_tree, test_features_df) #predict
-mean(test_pred_tree == test_poi$poi) #Calculate accuracy
 
-train_cm <- table(train_pred_tree, train_poi$poi)
-test_cm <- table(test_pred_tree, test_poi$poi)
+control <- trainControl(method = "cv", number = 5, sampling = "smote", classProbs = TRUE, summaryFunction = twoClassSummary)
 
-precision(train_cm,relevant='True')  
-recall(train_cm,relevant='True')
-precision(test_cm,relevant='True')   #what % of tuples that the classifier labeled as positive are actually positive
-recall(test_cm,relevant='True') #what % of positive tuples did the classifier label as positive
+# winnow - feature selection or not
+grid <- expand.grid(.model = "tree", .winnow = c(TRUE,FALSE), .trials = 1:5) 
+
+model_C50 <- train(poi ~ ., data = cbind(train_features_df, train_poi), method = "C5.0", 
+                   metric = "ROC", trControl = control, 
+                   preProcess = c("scale", "center"), 
+                   tuneGrid = grid)
+
+train_pred_C50 <- predict(model_C50, train_features_df) #predict
+mean(train_pred_C50 == train_poi$poi) # calculate accuracy 0.893
+
+test_pred_C50 <- predict(model_C50, test_features_df) #predict
+mean(test_pred_C50 == test_poi$poi) # calculate accuracy 0.8039
+
+# PRECISION and RECALL
+test_cm_C50 <- table(predict(model_C50, test_features_df), test_poi$poi)
+confusionMatrix(test_cm_C50, mode = 'everything') # acc 0.8039, pre 0.9286, recall 0.8478
+
+# AUC
+test_pred_C50 <- ROCR::prediction(as.numeric(predict(model_C50, test_features_df)), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_C50, "auc")@y.values) # 0.623 auc
 ```
 
 ## 3B - Baseline KNN Model
@@ -192,10 +203,8 @@ test2 = cbind(test_features_df,test_poi)
 train2[is.na(train2)] = 0
 test2[is.na(test2)] = 0
 
-control <- trainControl(method = "cv", number = 5, sampling = "smote", classProbs= TRUE, summaryFunction = twoClassSummary)
-
 model_knn <- train(poi ~., data = train2, method="knn", trControl = control,
-                   tuneGrid =expand.grid(k = c(3, 7, 11)),
+                   tuneGrid = expand.grid(k = c(3, 7, 11)),
                    preProcess = c("scale", "center"),
                    metric = "ROC")
 
@@ -216,6 +225,7 @@ test_pred_knn <- ROCR::prediction(as.numeric(pred_knn), as.numeric(test_poi$poi)
 as.numeric(performance(test_pred_knn, "auc")@y.values) # 0.591 auc
 
 ```
+
 ## 3B - Baseline RPart Model
 ```{r}
 library(rpart)
@@ -224,7 +234,10 @@ control <- trainControl(method = "cv", number = 5, sampling = "smote", classProb
 
 grid <- expand.grid(.cp = c(0.005, 0.01, 0.02, 0.05, 0.1))
 
-rpart_model_smote <- train(poi ~ ., data = cbind(train_features_df, train_poi), method = "rpart", metric = "ROC", trControl = control, preProcess = c("scale", "center"), tuneGrid = grid)
+rpart_model_smote <- train(poi ~ ., data = cbind(train_features_df, train_poi), 
+                           method = "rpart", metric = "ROC", 
+                           trControl = control, preProcess = c("scale", "center"), 
+                           tuneGrid = grid)
 
 rpart_model_smote$bestTune
 
@@ -333,6 +346,7 @@ test_cm
 
 ## 3C - Boosting
 ```{r}
+# xgboost with caret train
 
 ```
 
@@ -340,14 +354,19 @@ test_cm
 ```{r}
 library(caretEnsemble)
 library(caret)
-folds <- createFolds(train_poi$poi , k = 5)
-#We specify summaryFunction so that we can use ROC as our metric for primary model selection later
+
+folds <- createFolds(train_poi$poi, k = 5)
+
+# summaryFunction so that we can use ROC as our metric for primary model selection later
 control <- trainControl(method='repeatedcv', number=5, repeats=3, index=folds, savePredictions='final', classProbs=TRUE, summaryFunction=twoClassSummary)
+
 algos <- c('rf','nnet')
-# models <- caretList(train_poi$poi ~ . , data=cbind(train_features_df, train_poi$poi), trControl=control, metric='ROC', methodList=algos)
-# models_perf <- resamples(models)
-# summary(models_perf)
-# modelCor(models_perf)
+
+models <- caretList(train_poi$poi ~ ., data=cbind(train_features_df, train_poi$poi), trControl=control, metric='ROC', methodList=algos)
+
+models_perf <- resamples(models)
+summary(models_perf)
+modelCor(models_perf)
 ```
 
 ### 3D - Features Engineering
