--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -170,7 +170,7 @@ library(C50)
 
 control <- trainControl(method = "cv", number = 5, sampling = "smote", classProbs = TRUE, summaryFunction = twoClassSummary)
 
-# winnow - feature selection or not
+# winnow - feature selection or not, trials - number of boosting iterations (more than 5 causing some warnings)
 grid <- expand.grid(.model = "tree", .winnow = c(TRUE,FALSE), .trials = 1:5) 
 
 model_C50 <- train(poi ~ ., data = cbind(train_features_df, train_poi), method = "C5.0", 
@@ -190,7 +190,7 @@ confusionMatrix(test_cm_C50, mode = 'everything') # acc 0.8039, pre 0.9286, reca
 
 # AUC
 test_pred_C50 <- ROCR::prediction(as.numeric(predict(model_C50, test_features_df)), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_C50, "auc")@y.values) # 0.623 auc
+as.numeric(performance(test_pred_C50, "auc")@y.values) # 0.6239 auc
 ```
 
 ## 3B - Baseline KNN Model
