--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -261,33 +261,21 @@ summary(nn2)
 
 nn2_pred = predict(nn2, train_features_df)
 mean(nn2_pred == train_poi$poi)
-confusionMatrix(nn2_pred, train_poi$poi) #Training accuracy 
+confusionMatrix(nn2_pred, train_poi$poi, mode = 'everything') #Training accuracy 
 # test data pred
 test_pred1 = predict(nn2, test_features_df)
 mean(test_pred1 == test_poi$poi)
-confusionMatrix(test_pred1, test_poi$poi) #Testing accuracy 
+confusionMatrix(test_pred1, test_poi$poi, mode = 'everything') #Testing accuracy 
 
 # tuning the model
 cvCtrl = trainControl(method="cv", number = 5, sampling = 'smote')
 grid = expand.grid(size = 2, decay = 0)
 nn3 = train(poi ~., method = 'nnet', data = train2, trControl = cvCtrl, tuneGrid = grid,preProcess = c("scale", "center"), tuneLength = 5)
 nn3_pred = predict(nn3, train2)
-confusionMatrix(nn3_pred, train_poi$poi) #Training accuracy 
+confusionMatrix(nn3_pred, train_poi$poi, mode = 'everything') #Training accuracy 
 # test data pred 
 test_pred2 = predict(nn3, test2)
-confusionMatrix(test_pred2, test_poi$poi) #Testing accuracy
-
-#Precision-recall testing
-train_labels = train_poi$poi
-test_labels = test_poi$poi
-#Precision-recall curve for model nn2
-pred = ROCR::prediction(as.numeric(test_pred1), as.numeric(test_labels))
-perf1 = performance(pred, "prec", "rec")
-plot(perf1) # Very low  precisions
-#Precision-recall curve for model nn3
-pred2 = ROCR::prediction(as.numeric(test_pred2), as.numeric(test_labels))
-perf2 = performance(pred2, "prec", "rec")
-plot(perf2) # Very low  precisions
+confusionMatrix(test_pred2, test_poi$poi, mode = 'everything') #Testing accuracy
 ```
 
 
